implement purchase controller,Added functionality to save purchased items in the database, Integrated logic to deduct the purchased quantity from available stock
