# src/routes/eCommerceRouter.ts
@@ -19,6 +19,7 @@ import checkEmailVerified from "../middlewears/emailVerify-auth-middleware.js";
 import PasswordRecovery from "../controllers/PasswordRecovery.js";
 import GenerateOTP from "../controllers/GenerateOTP.js";
 import PasswordReset from "../controllers/PasswordReset.js";
+import PurchasedShoes from "../controllers/PurchasedShoes.js";
 
 const fileStorage = multer.diskStorage({
   destination: (_, _file, cb) => {
@@ -70,5 +71,6 @@ eCommerceRouter.post("/verify", verifyUserController);
 eCommerceRouter.post("/recoverPassword", PasswordRecovery);
 eCommerceRouter.post("/GenerateOTP", GenerateOTP);
 eCommerceRouter.post("/resetPassword", PasswordReset);
+eCommerceRouter.post("/purchased", PurchasedShoes);
 
 export default eCommerceRouter;
